<resources>
    <string name="app_name">Intent Challenge</string>
    <string name="contact_details">Contact Details</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="contact_name">Contact Name</string>
    <string name="cell_no">Cell No</string>
    <string name="website">Website</string>
    <string name="address">Address</string>
    <string name="happy_face">happy face</string>
    <string name="neutral_face">neutral face</string>
    <string name="sad_face">sad face</string>
    <string name="fvhgvghh">fvhgvghh</string>
    <string name="callmain">callMain</string>
    <string name="locationmain">locationMain</string>
    <string name="webmain">webMain</string>
    <string name="face_main_2">face Main 2</string>
</resources>
