<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtV3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/fvhgvghh"
        android:textSize="18sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/callImg3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/callmain"
        app:srcCompat="@drawable/call" />

    <ImageView
        android:id="@+id/webImg3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        app:srcCompat="@drawable/web" />

    <ImageView
        android:id="@+id/lcnImg3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/locationmain"
        app:srcCompat="@drawable/location" />

    <ImageView
        android:id="@+id/faceMain2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:contentDescription="@string/face_main_2"
        app:srcCompat="@drawable/neutral" />

    <TextView
        android:id="@+id/txtV2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="20dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/contact_details"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnMainId"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/create_new_contact"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</LinearLayout>