<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryLight"
    android:orientation="vertical"
    tools:context=".Activity2">

    <EditText
        android:id="@+id/edTxt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/contact_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edTxt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/cell_no"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edTxt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/website"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edTxt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/address"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img2"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/happy_face"
            android:focusable="true"
            app:srcCompat="@drawable/happy" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/neutral_face"
            android:focusable="true"
            app:srcCompat="@drawable/neutral" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/sad_face"
            android:focusable="true"
            app:srcCompat="@drawable/sed" />
    </LinearLayout>

</LinearLayout>